<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="location">location</string>
    <string name="nothing">Nothing</string>
    <string name="humidity">Влажность</string>
    <string name="chance_of_rain">Вероятность осадков</string>
    <string name="wind">Ветер</string>
    <string name="weather_image">weather image</string>
    <string name="def_city">Казань</string>
</resources>